apps/php/overlays/bgd/php-hello-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: php-hello
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
