apps/php/overlays/bgd/php-hello-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: php-hello
  name: php-hello
  namespace: php-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-hello
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: php-hello
    spec:
      containers:
      - image: quay.io/tkhussein/php-hello:latest
        name: php-hello
---
