apps/php/overlays/bgd/php-hello-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: php-hello
  name: php-hello
  namespace: php-hello
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: php-hello
    weight: 100
